decompiler/tests/snapshots/test_tool__x86_64_callconv__func103.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  61 instrs
    0 r12: UnknownUnsized <- Ancestral(AncestralName("stack_bottom"))
    1 r2: UnknownUnsized <- Ancestral(AncestralName("CF"))
    2 r3: UnknownUnsized <- Ancestral(AncestralName("PF"))
    3 r4: UnknownUnsized <- Ancestral(AncestralName("AF"))
    4 r5: UnknownUnsized <- Ancestral(AncestralName("ZF"))
    5 r6: UnknownUnsized <- Ancestral(AncestralName("SF"))
    6 r7: UnknownUnsized <- Ancestral(AncestralName("TF"))
    7 r8: UnknownUnsized <- Ancestral(AncestralName("IF"))
    8 r9: UnknownUnsized <- Ancestral(AncestralName("DF"))
    9 r10: UnknownUnsized <- Ancestral(AncestralName("OF"))
   10 r11: UnknownUnsized <- Ancestral(AncestralName("RBP"))
   11 r12: UnknownUnsized <- Ancestral(AncestralName("RSP"))
   12 r13: UnknownUnsized <- Ancestral(AncestralName("RIP"))
   13 r14: UnknownUnsized <- Ancestral(AncestralName("RDI"))
   14 r15: UnknownUnsized <- Ancestral(AncestralName("RSI"))
   15 r16: UnknownUnsized <- Ancestral(AncestralName("RAX"))
   16 r17: UnknownUnsized <- Ancestral(AncestralName("RBX"))
   17 r18: UnknownUnsized <- Ancestral(AncestralName("RCX"))
   18 r19: UnknownUnsized <- Ancestral(AncestralName("RDX"))
   19 r20: UnknownUnsized <- Ancestral(AncestralName("R8"))
   20 r21: UnknownUnsized <- Ancestral(AncestralName("R9"))
   21 r22: UnknownUnsized <- Ancestral(AncestralName("R10"))
   22 r23: UnknownUnsized <- Ancestral(AncestralName("R11"))
   23 r24: UnknownUnsized <- Ancestral(AncestralName("R12"))
   24 r25: UnknownUnsized <- Ancestral(AncestralName("R13"))
   25 r26: UnknownUnsized <- Ancestral(AncestralName("R14"))
   26 r27: UnknownUnsized <- Ancestral(AncestralName("R15"))
   27 r28: UnknownUnsized <- Ancestral(AncestralName("ZMM0"))
   28 r29: UnknownUnsized <- Ancestral(AncestralName("ZMM1"))
   29 r30: UnknownUnsized <- Ancestral(AncestralName("ZMM2"))
   30 r31: UnknownUnsized <- Ancestral(AncestralName("ZMM3"))
   31 r32: UnknownUnsized <- Ancestral(AncestralName("ZMM4"))
   32 r33: UnknownUnsized <- Ancestral(AncestralName("ZMM5"))
   33 r34: UnknownUnsized <- Ancestral(AncestralName("ZMM6"))
   34 r35: UnknownUnsized <- Ancestral(AncestralName("ZMM7"))
   35 r36: UnknownUnsized <- Ancestral(AncestralName("ZMM8"))
   36 r37: UnknownUnsized <- Ancestral(AncestralName("ZMM9"))
   37 r38: UnknownUnsized <- Ancestral(AncestralName("ZMM10"))
   38 r39: UnknownUnsized <- Ancestral(AncestralName("ZMM11"))
   39 r40: UnknownUnsized <- Ancestral(AncestralName("ZMM12"))
   40 r41: UnknownUnsized <- Ancestral(AncestralName("ZMM13"))
   41 r42: UnknownUnsized <- Ancestral(AncestralName("ZMM14"))
   42 r43: UnknownUnsized <- Ancestral(AncestralName("ZMM15"))
   43 r45: UnknownUnsized <- Ancestral(AncestralName("arg0"))
   44 r15: UnknownUnsized <- Get(r45)
   45 r46: UnknownUnsized <- Ancestral(AncestralName("arg1"))
   46 r19: UnknownUnsized <- Get(r46)
   47 r47: UnknownUnsized <- Ancestral(AncestralName("arg2"))
   48 r18: UnknownUnsized <- Get(r47)
   49 r48: UnknownUnsized <- Ancestral(AncestralName("arg3"))
   50 r49: UnknownUnsized <- Part { src: r48, offset: 0, size: 8 }
   51 r20: UnknownUnsized <- Get(r49)
   52 r50: UnknownUnsized <- Part { src: r48, offset: 8, size: 8 }
   53 r21: UnknownUnsized <- Get(r50)
0x401316:
   54 r45: UnknownUnsized <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
0x40131c:
   55 r45: UnknownUnsized <- Void
   56 r46: UnknownUnsized <- Part { src: r28, offset: 0, size: 8 }
   57 r45: UnknownUnsized <- Concat { lo: r45, hi: r46 }
   58 r45: UnknownUnsized <- Part { src: r45, offset: 0, size: 4 }
   59 r47: UnknownUnsized <- SetReturnValue(r45)
   60 r47: UnknownUnsized <- Control(Ret)


 --- ssa pre-xform
ssa program  61 instrs
.B0:    ;;  → Always(Return).
         r27: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM0"))
         r54: unknown <UnknownUnsized> <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
         r56: unknown <UnknownUnsized> <- Part { src: r27, offset: 0, size: 8 }
         r57: unknown <UnknownUnsized> <- Concat { lo: r55, hi: r56 }
         r58: unknown <UnknownUnsized> <- Part { src: r57, offset: 0, size: 4 }
         r59: unknown <UnknownUnsized> <- SetReturnValue(r58)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r27, r54, r58, r59]
  domtree:
    BlockID(0)

 --- ssa
ssa program  61 instrs
.B0:    ;;  → Always(Return).
         r27: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM0"))
         r54: unknown <UnknownUnsized> <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
         r58: unknown <UnknownUnsized> <- Part { src: r27, offset: 0, size: 4 }
         r59: unknown <UnknownUnsized> <- SetReturnValue(r58)


 --- ast

T0: {
  TODO /* unsupported: movss xmm0,[rsp+8] */;
  ;
  return pre:ZMM0[4 .. 0]
}
